[package]
name = "evergreen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["cbor", "gossipsub", "metrics", "quic", "request-response", "tokio"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
