[package]
name = "firesidexr-evergreen"
version = "0.1.1"
edition = "2024"
homepage = "https://firesidexr.com/evergreen"
readme = "README.md"
description = "Network backend build on libp2p"
repository = "https://github.com/FiresideXR/evergreen-rs"
license = "Apache-2.0"
keywords = ["gamedev", "networking", "libp2p", "firesidexr"]
categories = ["network-programming", "game-development"]

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["cbor", "gossipsub", "metrics", "quic", "request-response", "tokio"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
