[package]
name = "evergreen-godot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
firesidexr-evergreen = {path = "../evergreen"}
godot = { version = "0.5.1", features = ["api-4-6", "experimental-threads", "register-docs"] }
libp2p = { version = "0.56.0"}
tokio = "1.52.3"
