[package]
name = "firesidexr-evergreen"
version = "0.2.0"
edition = "2024"
homepage = "https://firesidexr.com/evergreen"
readme = "README.md"
description = "Network backend build on libp2p"
repository = "https://github.com/FiresideXR/evergreen-rs"
license = "Apache-2.0"
keywords = ["gamedev", "networking", "iroh", "firesidexr"]
categories = ["network-programming", "game-development"]

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
iroh = "0.98.2"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
